#1133: Converted GetOffers UC to extend BasePaginatedMultipleEntitiesCommand