@@ -17,7 +17,6 @@
 package com.echothree.control.user.offer.server.command;
 
 import com.echothree.control.user.offer.common.form.GetOffersForm;
-import com.echothree.control.user.offer.common.result.GetOffersResult;
 import com.echothree.control.user.offer.common.result.OfferResultFactory;
 import com.echothree.model.control.offer.server.control.OfferControl;
 import com.echothree.model.control.party.common.PartyTypes;
@@ -26,41 +25,50 @@ import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.offer.server.entity.Offer;
 import com.echothree.model.data.offer.server.factory.OfferFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetOffersCommand
-        extends BaseMultipleEntitiesCommand<Offer, GetOffersForm> {
-    
+        extends BasePaginatedMultipleEntitiesCommand<Offer, GetOffersForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.Offer.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetOffersCommand */
     public GetOffersCommand(UserVisitPK userVisitPK, GetOffersForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
+    @Override
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        var offerControl = Session.getModelController(OfferControl.class);
+
+        return offerControl.countOffers();
+    }
+
     @Override
     protected Collection<Offer> getEntities() {
         var offerControl = Session.getModelController(OfferControl.class);
@@ -70,15 +78,18 @@ public class GetOffersCommand
     
     @Override
     protected BaseResult getResult(Collection<Offer> entities) {
-        GetOffersResult result = OfferResultFactory.getGetOffersResult();
-        var offerControl = Session.getModelController(OfferControl.class);
+        var result = OfferResultFactory.getGetOffersResult();
 
-        if(session.hasLimit(OfferFactory.class)) {
-            result.setOfferCount(offerControl.countOffers());
+        if(entities != null) {
+            var offerControl = Session.getModelController(OfferControl.class);
+
+            if(session.hasLimit(OfferFactory.class)) {
+                result.setOfferCount(getTotalEntities());
+            }
+
+            result.setOffers(offerControl.getOfferTransfers(getUserVisit(), entities));
         }
 
-        result.setOffers(offerControl.getOfferTransfers(getUserVisit(), entities));
-        
         return result;
     }
     
